src/styles/_typography.scss
p {
    font-size: 2rem;
    line-height: 3rem;
    margin-bottom: 3rem;
}

h2 {
    font-family: 'Montserrat',
        sans-serif;
    font-size: 3rem;
    font-weight: 600;
    line-height: 1.6em;
    margin-bottom: 3rem;
}

h3 {
    font-size: 2.5rem;
    margin-bottom: 2rem;
}

ul {
    font-size: 2rem;
    list-style-type: none;
    margin-bottom: 5rem;

    li {
        margin-bottom: 1rem;

        &::before {
            content: "-";
            margin-right: 2rem;
        }
    }
}

